# Flux-Chess

./: .gitignore  README.md  apiplan.md  keycontrol.py  mappings.py  pawn.dxf
cad/: list.md
coil_generation/: coils_viewer.html  fluxchess_coil_all.kicad_mod  generate_coils.py  optimize_coil.py
esp32/: .env.example  .gitignore
esp32/codegen/: generate.py
esp32/esp_src/: esp_src.ino
esp32/firmware/: api.h  api_handlers.cpp  api_handlers.h  board.h  firmware.ino  force_tables.h  force_tables_subdivided.h  hardware.h  hexapawn.h  hexapawn_table_lookup.h  hexapawn_tables.h  macros.h  partitions.csv  pathplanner.cpp  pathplanner.h  physics.h  pins.h  serial_server.h  transport.cpp  transport.h  utils.h
esp32/firmware-rs/: Cargo.toml
esp32/firmware-rs/.cargo/: config.toml
esp32/firmware-rs/api/: Cargo.toml
esp32/firmware-rs/api/src/: lib.rs
esp32/firmware-rs/src/: api.rs  board.rs  hardware.rs  main.rs  pins.rs  serial_server.rs  storage.rs
esp32/firmware_demo/: firmware_demo.ino  force_tables_subdivided.h  hardware.h  physics.h  pins.h
esp32/firmware_demo_random/: api.h  board.h  firmware_demo_random.ino  force_tables.h  hexapawn.h  pathplanner.h  serial_server.h  utils.h
esp32/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
esp32/scripts/: dashboard.sh  dev_demo.sh  dev_demo_random.sh  dev_serial.sh  dev_wifi.sh  run.sh  sensor_poll.py  test_oe.py  upload.sh  view_raw.sh
esp32/tests/: gen_hexapawn_tables.cpp  gen_hexapawn_tables.sh  (+8 more)
gui/: gui_main.py  index.html
pcb_coil/: pcb_calculator.py
sim/: sim.py
simulations/: generate_force_table.py
(+63 files in other folders)
