[package]
name = "fluxchess-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
fluxchess-api = { path = "api" }
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-alloc = "0.9.0"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
critical-section = "1.2.0"
log = "0.4"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
